2006-10-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix of ticket #94. Ignore escape sequences when binding keys using readline syntax.

2006-07-20 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix for cursor position when tab is inserted

2006-07-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added creation of default configuration file if missing.
	* There may still be issues with config file creation for movpy, py2exe and similar systems.

2006-07-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added AnsiState class to simplify work with getting the aansi color handling to work properly
	* Added NOP function to readline class to have an empty function to bind to tab completion
	* Tab completion bound to do nothing method NOP by default. 
	
2006-06-27 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Changes from yesterday were not correct. Resulted in invisible docstrings
	  when using ? in ipython.
	* ANSI sequence Esc[0m in write_color will now result in a white color with no 
	  attributes (same as in cygwin). But the color of input text is controlled
	  set_input_color in config file with default same as dos-color was when
	  launching python. set_prompt_color controls prompt and raw_input text
	  and also defaults to same as dos-color was when launching python.
	  Unfortunately I have not found a way to control color of text that is printed 
	  with a print statement.

2006-06-26 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Changes to ansi handling to preserve initial consoles color
	  attribute for ordinary output.

2006-05-31 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* added text about installation for the binary release to the manual
	* Added code to remove temporary latex files when building manual
	* changed version in release.py to 1.3

2006-05-07 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* remove dependency on win32all